--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: "Gotham Book";
+  src: url("../public/GothamBook.ttf");
+}
+
+* {
+  font-family: "Gotham Book", sans-serif;
+}
